# 5MLET-Datathon

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py  requests.py  routes.py
app/services/: feature_service.py  model_provider.py  model_service.py
config/: config.yaml  lightgbm.yaml  test_config.yaml  xgboost.yaml
data/files/: PEDE_2025.xlsx
data/processed/: pede_2022-24.csv
data/raw/: base_dados.xlsx
docs/: data_pipeline.md  model_training.md
grafana/provisioning/dashboards/: fastapi-observability.json
models/: pipeline_lgbm.joblib  pipeline_rf.joblib  pipeline_xgb.joblib
notebooks/: data_cleaning.ipynb  eda.ipynb  modeling.ipynb  preprocessing_playground.ipynb
src/: feature_engineering.py  preprocessing.py  train.py
src/5mlet_datathon/: __init__.py
src/mlet_datathon/: base.py  preprocessing.py
src/passos_magicos/: __init__.py  config_loader.py  dispatcher.py  models.py  train.py  utils.py
src/passos_magicos/core/: __init__.py  paths.py
src/passos_magicos/data/: __init__.py  cleanup_environment.py  constants.py  make_bronze.py  make_gold.py  make_silver.py  preprocessing.py  setup.py  utils.py
src/passos_magicos/models/: config_loader.py  evaluate.py  factory.py  ml_preprocessing.py  train.py
tests/: test_evaluate.py  test_model.py  test_preprocessing.py  test_processing.py
tests/app/: test_endpoints.py
tests/data/: test_make_bronze.py  test_make_gold.py  test_make_silver.py  test_preprocessing.py  test_setup.py
tests/models/: test_evaluate.py  test_model.py  test_preprocessing.py
