[project]
name = "passos-magicos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "renato.inomata@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "evidently>=0.7.20",
    "fastapi>=0.129.0",
    "lightgbm>=4.6.0",
    "mlflow>=3.9.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pandera>=0.29.0",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.40.0",
    "unidecode>=1.4.0",
    "xgboost>=3.2.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[project.scripts]
passos-magicos = "passos_magicos:main"

[build-system]
requires = ["uv-build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/passos_magicos"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
